# lambda-at-home

./: .gitignore  LICENSE  README.md  package-lock.json
frontend/: LICENSE  README.md  next.config.ts  package.json
frontend/src/app/: layout.tsx
frontend/src/app/components/: ImageUploader.tsx
master-home/: Cargo.toml  README.md  event.json
master-home/src/: event_handler.rs  llm.rs  main.rs
master-home/src/openai/: chat.rs  embed.rs  error.rs  lib_response.rs  libs.rs  mod.rs  requests.rs  response.rs  utils.rs
presigned-url/: Cargo.toml  README.md  event.json
presigned-url/src/: http_handler.rs  main.rs  presigned_generator.rs
src/app/: globals.css  page.tsx
