[package]
name = "master-home"
version = "0.1.0"
edition = "2021"

[dependencies]
aws_lambda_events = { version = "0.16.1", default-features = false, features = ["eventbridge", "s3"] }
lambda_runtime = "0.14.2"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.94.0"

env_logger = "0.11.6"
log = "0.4.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8.21"
reqwest = { version = "0.12.9", default-features = false, features = [
  "rustls-tls",
  "json",
  "stream",
] }
thiserror = "2.0.11"
futures = "0.3"
async-stream = "0.3.6"

base64 = "0.22.1"

tokio = { version = "1", features = ["macros"] }