[package]
name = "presigned-url"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "0.15.1"
aws-sdk-s3 = { version = "1.94.0", features = ["http-1x"] }
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
serde_json = "1.0.140"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }

tokio = { version = "1", features = ["macros"] }

